# litestar-react

./: .gitignore  LICENSE  README.md  example-app.py  pyproject.toml
litestar_react/: __init__.py  controller.py
starlite_react/: __init__.py  controller.py
tests/: test_litestar_react.py  test_starlite_react.py
tests/react-build/: asset-manifest.json  index.html
tests/react-build/static/js/: 787.b701888c.chunk.js.map  main.1050e510.js  main.1050e510.js.map  main.e78473f6.js  main.e78473f6.js.map
