[tool]
[tool.poetry]
name = "starlite-react"
version = "0.1.1"
description = "Serve React static files from Starlite"
authors = ["Kyle Smith <smithk86@smc3.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/smithk86/starlite-react"
repository = "https://github.com/smithk86/starlite-react"
documentation = "https://smithk86.github.io/starlite-react"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.10,<4"
starlite = "*"

[tool.poetry.group.example.dependencies]
uvicorn = "*"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
mypy = "*"
pytest-mypy = "*"

[tool.poetry.group.code.dependencies]
black = "*"

[tool.poetry.scripts]
pytest = "pytest:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = "true"

[tool.pytest.ini_options]
addopts = "--mypy"
