[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = "**/*.py"
strict = "true"

[tool.poetry]
name = "litestar-react"
version = "0.2.0"
description = "Serve React static files from litestar"
authors = ["Kyle Smith <smithk86@smc3.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/smithk86/litestar-react"
repository = "https://github.com/smithk86/litestar-react"
documentation = "https://smithk86.github.io/litestar-react"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.10,<4"
litestar = "*"

[tool.poetry.group.example.dependencies]
uvicorn = "*"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
mypy = "*"
pytest-mypy = "*"

[tool.poetry.group.code.dependencies]
black = "*"

[tool.poetry.scripts]
pytest = "pytest:main"

[tool.pytest.ini_options]
addopts = "--mypy"
